--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Nagpur RMS (CEAT)</title>
       <link rel="stylesheet" href="style.css">
+      <!-- Open Graph Tags -->
+      <meta property="og:title" content="Nagpur RMS" />
+       <meta property="og:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
+       <meta property="og:image" content="https://example.com/path/to/image.jpg" />
+       <meta property="og:url" content="https://github.com/Virajmanmode/Nagpur-RMS/blob/92d86e9b161697fc79a5b3f17ff1538f8f90f44f/Ceat-logo.jpg" />
+      <meta property="og:type" content="website" />
+
+       <!-- Optional: Twitter Cards -->
+      <meta name="twitter:title" content="Nagpur RMS" />
+      <meta name="twitter:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
+      <meta name="twitter:image" content="https://github.com/Virajmanmode/Nagpur-RMS/blob/92d86e9b161697fc79a5b3f17ff1538f8f90f44f/Ceat-logo.jpg" />
    </head>
    <body>
       <div class="headH">
