--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="https://www.ceat.com/content/dam/ceat/website/logo.png" height="25" width="90" alt="CEAT Logo">
             <h1>RMS</h1>
          </div>
-         <span>v1.0</span>
+         <span>v1.1</span>
       </div>
       
       <h3 id="titleSec">Shift Report Generator</h3>
@@ -163,6 +163,7 @@
                   <option value="Akshay">Amisha</option>
                   <option value="Akshay">Dipak</option>
                   <option value="Akshay">Sejal</option>
+                  <option value="Akshay">Other</option>
                </select>
             </div>
          </div>
