--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <!-- Open Graph Tags -->
       <meta property="og:title" content="Nagpur RMS" />
        <meta property="og:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
-       <meta property="og:image" content="https://example.com/path/to/image.jpg" />
-       <meta property="og:url" content="https://github.com/Virajmanmode/Nagpur-RMS/blob/92d86e9b161697fc79a5b3f17ff1538f8f90f44f/Ceat-logo.jpg" />
+       <meta property="og:image" content="https://github.com/Virajmanmode/Nagpur-RMS/blob/92d86e9b161697fc79a5b3f17ff1538f8f90f44f/Ceat-logo.jpg" />
+       <meta property="og:url" content="https://ceatnagpur-rms.netlify.app" />
       <meta property="og:type" content="website" />
 
        <!-- Optional: Twitter Cards -->
