--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       <!-- Open Graph Tags -->
       <meta property="og:title" content="Nagpur RMS" />
        <meta property="og:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
-       <meta property="og:image" content="https://github.com/Virajmanmode/Nagpur-RMS/blob/89ad0b50859f56e6340eb6508e3a5a877e484aef/Ceat-logo.jpg" />
+       <meta property="og:image" content="https://i.ibb.co/HXRnd2Z/Ceat-logo.jpg" />
        <meta property="og:url" content="https://ceatnagpur-rms.netlify.app" />
       <meta property="og:type" content="website" />
 
        <!-- Optional: Twitter Cards -->
       <meta name="twitter:title" content="Nagpur RMS" />
       <meta name="twitter:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
-      <meta name="twitter:image" content="https://github.com/Virajmanmode/Nagpur-RMS/blob/92d86e9b161697fc79a5b3f17ff1538f8f90f44f/Ceat-logo.jpg" />
+      <meta name="twitter:image" content="https://i.ibb.co/HXRnd2Z/Ceat-logo.jpg" />
    </head>
    <body>
       <div class="headH">
