--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta property="og:title" content="Nagpur RMS" />
        <meta property="og:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
        <meta property="og:image" content="https://i.ibb.co/HXRnd2Z/Ceat-logo.jpg" />
-       <meta property="og:url" content="https://ceatnagpur-rms.netlify.app" />
+       <meta property="og:url" content="https://ceatnagpur-rms.netlify.app/" />
       <meta property="og:type" content="website" />
 
        <!-- Optional: Twitter Cards -->
@@ -23,7 +23,7 @@
             <img src="https://www.ceat.com/content/dam/ceat/website/logo.png" height="25" width="90" alt="CEAT Logo">
             <h1>RMS</h1>
          </div>
-         <span>v1.1</span>
+         <span>v1.2</span>
       </div>
       
       <h3 id="titleSec">Shift Report Generator</h3>
@@ -172,6 +172,7 @@
         
          <div class="exportBtn">
             <button type="button" class="btn" onclick="saveAllSections()"><img src="https://img.icons8.com/?size=100&id=16501&format=png&color=000000" alt="Save" title="Save"></button>
+            <button type="button" class="btn" onclick="copyToClipboard()"><img src="https://img.icons8.com/?size=100&id=rVeCjZRybO5y&format=png&color=000000" alt="Copy to clipboard" title="Copy to clipboard"></button>
             <!-- Export Buttons -->
             <button class="btn" onclick="exportAsPDF()"><img src="https://img.icons8.com/?size=100&id=BHEB7fl4z8q7&format=png&color=000000" alt="Export as PDF" title="Export as PDF"></button>
             <button class="btn" onclick="exportAsTXT()"><img src="https://img.icons8.com/?size=100&id=5cCAUCqFJ9kg&format=png&color=000000" alt="Export as Text" title="Export as Text"></button>
