--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Nagpur RMS (CEAT)</title>
       <link rel="stylesheet" href="style.css">
+
+      <link rel="icon" href="https://i.ibb.co/Sxs9Y2w/Ceat-RMS-Logo.png" type="image/png">
       <!-- Open Graph Tags -->
       <meta property="og:title" content="Nagpur RMS" />
        <meta property="og:description" content="Nagpur RMS - Your reliable source for raw material management and services." />
        <meta property="og:image" content="https://i.ibb.co/HXRnd2Z/Ceat-logo.jpg" />
        <meta property="og:url" content="https://ceatnagpur-rms.netlify.app/" />
-      <meta property="og:type" content="website" />
+       <meta property="og:type" content="website" />
 
        <!-- Optional: Twitter Cards -->
       <meta name="twitter:title" content="Nagpur RMS" />
