--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </form>
         
          <div class="exportBtn">
-            <button onclick="submitData()" class="btn"><img src="https://img.icons8.com/?size=48&id=K6FkUVH0GtOD&format=png" alt=""></button>
+            <button type="button" onclick="submitData()" class="btn"><img src="https://img.icons8.com/?size=48&id=K6FkUVH0GtOD&format=png" alt=""></button>
 
             <button type="button" class="btn" onclick="saveAllSections()"><img src="https://img.icons8.com/?size=100&id=16501&format=png&color=000000" alt="Save" title="Save"></button>
             <button type="button" class="btn" onclick="copyToClipboard()"><img src="https://img.icons8.com/?size=100&id=rVeCjZRybO5y&format=png&color=000000" alt="Copy to clipboard" title="Copy to clipboard"></button>
