--- a/homepage.html
+++ b/homepage.html
@@ -38,7 +38,7 @@
         <div class="heroText">
          <h2>Streamlining Operations, Empowering Our Team: <span>Welcome to RMS</span></h2>
          <p>RMS is a dedicated web application designed to simplify daily tasks, enhance collaboration, and boost efficiency within our department. This platform provides essential tools and resources, all in one convenient location.</p>
-         <button href="#tools">Explore the Tools</button>
+         <a class="btn" href="#tools">Explore the Tools</a>
          </div>
      </div>
 
@@ -47,35 +47,35 @@
          <div class="tool-card">
              <h3>Shift Report Generator</h3>
              <p>Generate accurate and timely shift reports with ease.</p>
-             <button href="pages/shift-report-generator.html">Go to tool</button>
+             <a class="btn" href="pages/shift-report-generator.html">Go to tool</a>
          </div>
 
          <div class="tool-card">
              <h3>Shift Schedule Generator</h3>
              <p>Create and manage shift schedules efficiently.</p>
-             <button href="#">Go to tool</button>
+             <a class="btn" href="#">Go to tool</a>
          </div>
 
          <div class="tool-card">
              <h3>Scrap Consignment Generator</h3>
              <p>Streamline the process of creating scrap consignments.</p>
-             <button href="#">Go to tool</button>
+             <a class="btn" href="#">Go to tool</a>
          </div>
 
          <div class="tool-card">
              <h3>SAP T-Code Guide</h3>
              <p>Quick reference guide for commonly used SAP T-codes.</p>
-             <button href="#">Go to tool</button>
+             <a class="btn" href="#">Go to tool</a>
          </div>
          <div class="tool-card">
              <h3>Department Contacts</h3>
              <p>Quick access to department contact information.</p>
-             <button href="#">Go to tool</button>
+             <a class="btn" href="#">Go to tool</a>
          </div>
           <div class="tool-card">
              <h3>Useful Links</h3>
              <p>Access to important internal links and documents.</p>
-             <button href="#">Go to tool</button>
+             <a class="btn" href="#">Go to tool</a>
          </div>
 
          </div>
