--- a/Pages/shift-report-generator.html
+++ b/Pages/shift-report-generator.html
@@ -194,7 +194,7 @@
          function logout() {
              localStorage.removeItem("user");
              sessionStorage.removeItem("user");
-             window.location.href = "index.html";
+             window.location.href = "../index.html";
          }
    
          function checkLoginStatus() {
@@ -202,7 +202,7 @@
              const sessionUser = sessionStorage.getItem("user");
    
              if (!storedUser && !sessionUser) {
-                 window.location.href = "/index.html"; // Redirect if not logged in
+                 window.location.href = "../index.html"; // Redirect if not logged in
              }
          }
    
